# pulamafarm

./: Dockerfile  Dockerfile.api  Dockerfile.nginx  Dockerfile.web  build-prd.bat  buildw.sh  buildweb.bat  data-structure.md  docker-compose.yml  docker-readme.md  install-ubuntu.md  main.js  nginx.conf  order.html  package-lock.json  package.json  pulama-farm-website.html  runapi.bat  runweb.bat
api/: Dockerfile.api  app.py
db/: init_db.py  order.db
doc/: api-references.md
installer/: Cargo.toml  install-api.sh  install-web.sh  install.py  install.sh  installer.rs
temp/: order.html  pulama-farm-website.html  style.css
web/: app.module.ts  build-prd-dist.bat  order.html  pulama-farm-website.html  style.css
web/pulama-farm/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
web/pulama-farm/src/: index.html  styles.css
web/pulama-farm/src/app/: app.routes.ts  app.ts  home.component.ts  info.component.html  info.component.ts  order.component.ts
web/pulama-farm/src/environments/: environment.prod.ts  environment.ts
