[package]
name = "pulama-installer"
version = "1.0.0"
edition = "2021"
authors = ["Pulama Farm Team"]
description = "Ubuntu deployment installer for Pulama Farm (Flask API + Angular Web)"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
which = "6.0"
walkdir = "2.5"
chrono = "0.4"
once_cell = "1.19"

[[bin]]
name = "pulama-installer"
path = "installer.rs"

[profile.release]
opt-level = 3
lto = true